--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,7 +4,19 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
-      <h3 class="title">PC-Member of the 32st International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS '26)<br/>Torino, Italy</h3>
+      <h3 class="title">Editor of an <a href="https://link.springer.com/collections/iffhddcdcj">Acta Informatica Topical Collection on Horn Clauses for Verification and Synthesis</a></h3>
+      <div class="time">2026</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">PC-Member of the <a href="https://www.sci.unich.it/hcvs26/">13th Workshop on Horn Clauses for Verification and Synthesis (HCVS '26)</a><br/>Turin, Italy</h3>
+      <div class="time">2026</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">PC-Chair of the <a href="https://termination-portal.org/wiki/21st_International_Workshop_on_Termination"> 21st International Workshop on Termination (WST '26)</a><br/>Lisbon, Portugal</h3>
+      <div class="time">2026</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">PC-Member of the 32st International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS '26)<br/>Turin, Italy</h3>
       <div class="time">2026</div>
     </div>
     <div class="upper-row">
