--- a/_includes/awards.html
+++ b/_includes/awards.html
@@ -4,6 +4,11 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title">ETAPS Distinguished Paper Awards for "On Deciding Constant Runtime of Linear Loops"</h3>
+      <div class="time">2026</div>
+    </div><!--//upper-row-->
+    
+    <div class="upper-row">
       <h3 class="title"><a href="https://merz.gitlabpages.inria.fr/2024-ijcar/page/awards/">IJCAR Best paper honourable mention</a> for "Satisfiability Modulo Exponential Integer Arithmetic"</h3>
       <div class="time">2024</div>
     </div><!--//upper-row-->
