--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,6 +6,81 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
+            <h3 class="title">On Deciding Constant Runtime of Linear Loops</h3>
+            <div class="time">2026</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn, J. Giesl, P. Giesl, and N. Lommen</div>
+          <div class="appeared">
+            In Proceedings of the 32nd International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS '26),
+            Turin, Italy,
+            to appear.
+            <!-- ©<a href="http://www.springer.com/">Springer-Verlag</a> -->
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li>Winner of a <i>Distinguihed Paper Award</i></li>
+            <!-- <li><a href="https://doi.org/10.1007/978-3-031-99984-0_25">Final Version</a></li> -->
+            <li><a href="https://doi.org/10.48550/arXiv.2601.08492">Preliminary Version</a> appeared as arXiv:2601.08492 [cs.LO]</li>
+            <!-- <li><a href="./slides/cade25/slides.html">Slides</a> from talk at CADE</li> -->
+            <!-- <li>DOI: 10.1007/978-3-031-99984-0_25</li> -->
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+      
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">Infinite State Model Checking by Learning Transitive Relations</h3>
+            <div class="time">2025</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            In Proceedings of the 30th International Conference on Automated Deduction (CADE '25),
+            Stuttgart, Germany,
+            Lecture Notes in Artificial Intelligence 15943, pages 468-489.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-99984-0_25">Final Version</a></li>
+            <li><a href="https://doi.org/10.48550/arXiv.2510.25468">Preliminary Version</a> appeared as arXiv:2502.04761 [cs.LO]</li>
+            <li><a href="https://loat-developers.github.io/trl-eval/">Homepage</a></li>
+            <li><a href="./slides/cade25/slides.html">Slides</a> from talk at CADE</li>
+            <li>DOI: 10.1007/978-3-031-99984-0_25</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+      
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">Infinite State Model Checking by Learning Transitive Relations</h3>
+            <div class="time">2025</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            In Proceedings of the 30th International Conference on Automated Deduction (CADE '25),
+            Stuttgart, Germany,
+            Lecture Notes in Artificial Intelligence 15943, pages 468-489.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-99984-0_25">Final Version</a></li>
+            <li><a href="https://doi.org/10.48550/arXiv.2510.25468">Preliminary Version</a> appeared as arXiv:2502.04761 [cs.LO]</li>
+            <li><a href="https://loat-developers.github.io/trl-eval/">Homepage</a></li>
+            <li><a href="./slides/cade25/slides.html">Slides</a> from talk at CADE</li>
+            <li>DOI: 10.1007/978-3-031-99984-0_25</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+      
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
             <h3 class="title">Integrating Loop Acceleration into Bounded Model Checking</h3>
             <div class="time">2024</div>
           </div><!--//upper-row-->
