--- a/_includes/extended_abstracts.html
+++ b/_includes/extended_abstracts.html
@@ -6,6 +6,26 @@
     <div class="item">
       <div class="meta">
         <div class="upper-row">
+          <h3 class="title">AProVE: Becoming Open Source and Recent Improvements</h3>
+          <div class="time">2023</div>
+        </div><!--//upper-row-->
+        <div class="authors">F. Frohn, C. Fuhs, J. Giesl, J.-C. Kassing, and N. Lommen</div>
+        <div class="appeared">
+          20th International Workshop on Termination
+          (WST '25),
+          Leipzig, Germany.
+        </div>
+      </div><!--//meta-->
+      <div class="details">
+        <ul>
+          <li><a href="https://www.imn.htwk-leipzig.de/WST2025/proceedings/WST2025_paper_8.pdf">Final Version</a></li>
+        </ul>
+      </div><!--//details-->
+    </div><!--//item-->
+    
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
           <h3 class="title">Proving Non-Termination by Acceleration Driven Clause Learning</h3>
           <div class="time">2023</div>
         </div><!--//upper-row-->
