--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -4,8 +4,28 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title">Seminar <a href="http://verify.rwth-aachen.de/seminar/SAT26">Satisfiability Checking</a></h3>
+      <div class="time">SS 26</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">Verifikationsverfahren (Verification Techniques)</h3>
+      <div class="time">WS 25/26</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">Proseminar <a href="http://verify.rwth-aachen.de/proseminar/PK25">Fortgeschrittene Programmierkonzepte (Advanced Programming Concepts)</a></h3>
+      <div class="time">SS 25</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">Verifikationsverfahren (Verification Techniques)</h3>
+      <div class="time">WS 24/25</div>
+    </div>
+    <div class="upper-row">
       <h3 class="title">Proseminar <a href="http://verify.rwth-aachen.de/proseminar/PK24">Fortgeschrittene Programmierkonzepte (Advanced Programming Concepts)</a></h3>
       <div class="time">SS 24</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">Verifikationsverfahren (Verification Techniques)</h3>
+      <div class="time">WS 23/24</div>
     </div>
     <div class="upper-row">
       <h3 class="title">Proseminar <a href="http://verify.rwth-aachen.de/proseminar/PK23">Fortgeschrittene Programmierkonzepte (Advanced Programming Concepts)</a></h3>
