--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -31,24 +31,20 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
-            <h3 class="title">Infinite State Model Checking by Learning Transitive Relations</h3>
+            <h3 class="title"></h3>
             <div class="time">2025</div>
           </div><!--//upper-row-->
-          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="authors">E. De Angelis and F. Frohn</div>
           <div class="appeared">
-            In Proceedings of the 30th International Conference on Automated Deduction (CADE '25),
-            Stuttgart, Germany,
-            Lecture Notes in Artificial Intelligence 15943, pages 468-489.
-            ©<a href="http://www.springer.com/">Springer-Verlag</a>
+            Proceedings of the 12th Workshop on Horn Clauses for Verification and Synthesis (HCVS '25),
+            Zagreb, Croatia,
+            EPTCS 434
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
-            <li><a href="https://doi.org/10.1007/978-3-031-99984-0_25">Final Version</a></li>
-            <li><a href="https://doi.org/10.48550/arXiv.2510.25468">Preliminary Version</a> appeared as arXiv:2502.04761 [cs.LO]</li>
-            <li><a href="https://loat-developers.github.io/trl-eval/">Homepage</a></li>
-            <li><a href="./slides/cade25/slides.html">Slides</a> from talk at CADE</li>
-            <li>DOI: 10.1007/978-3-031-99984-0_25</li>
+            <li><a href="https://doi.org/10.4204/EPTCS.434">Final Version</a></li>
+            <li>DOI: 10.4204/EPTCS.434</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
@@ -70,7 +66,7 @@
         <div class="details">
           <ul>
             <li><a href="https://doi.org/10.1007/978-3-031-99984-0_25">Final Version</a></li>
-            <li><a href="https://doi.org/10.48550/arXiv.2510.25468">Preliminary Version</a> appeared as arXiv:2502.04761 [cs.LO]</li>
+            <li><a href="https://doi.org/10.48550/arXiv.2502.04761">Preliminary Version</a> appeared as arXiv:2502.04761 [cs.LO]</li>
             <li><a href="https://loat-developers.github.io/trl-eval/">Homepage</a></li>
             <li><a href="./slides/cade25/slides.html">Slides</a> from talk at CADE</li>
             <li>DOI: 10.1007/978-3-031-99984-0_25</li>
