--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -31,12 +31,11 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
-            <h3 class="title"></h3>
+            <h3 class="title">Proceedings of the 12th Workshop on Horn Clauses for Verification and Synthesis (HCVS '25)</h3>
             <div class="time">2025</div>
           </div><!--//upper-row-->
           <div class="authors">E. De Angelis and F. Frohn</div>
           <div class="appeared">
-            Proceedings of the 12th Workshop on Horn Clauses for Verification and Synthesis (HCVS '25),
             Zagreb, Croatia,
             EPTCS 434
           </div>
